MODTLR-18 fix code smell